fix(svp): grupper splitt-historikk per arbeidsgiver og inkluder orgnr
Splitt- og reverser-linjer i historikkinnslaget telles nå per arbeidsgiver
og viser arbeidsgivernavn, slik at flere arbeidsgivere som splittes i samme
bekreftelse får hver sin korrekte linje. Sammenligning av arbeidsgiver-
referanse bruker Objects.equals for å unngå NPE ved arbeidsforhold uten
arbeidsgiver.

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>